tests/checker/good/libchaincycle.scilla
scilla_version 0

import TestLib1

library LibChainCycle

let foo = sort_uint32

contract TestContrCycle
()
