tests/checker/bad/bad_adt_lib_2.scilla
scilla_version 0

import BadADTLib2

(***************************************************)
(*               Associated library                *)
(***************************************************)

contract BadLib ()
